--- a/.github/workflows/CI_maturin_python.yml
+++ b/.github/workflows/CI_maturin_python.yml
@@ -65,7 +65,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter --manifest-path gadjid_python/Cargo.toml
+          args: --release --out dist --manifest-path gadjid_python/Cargo.toml
           sccache: 'true'
           manylinux: auto
       - name: Upload wheels
@@ -91,7 +91,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter --manifest-path gadjid_python/Cargo.toml
+          args: --release --out dist --manifest-path gadjid_python/Cargo.toml
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v3
@@ -114,7 +114,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist --find-interpreter --manifest-path gadjid_python/Cargo.toml
+          args: --release --out dist --manifest-path gadjid_python/Cargo.toml
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v3
