Add musllinux wheel builds (for use in containers).
Signed-off-by: Sebastian Weichwald <sweichwald@users.noreply.github.com>

--- a/.github/workflows/CI_maturin_python.yml
+++ b/.github/workflows/CI_maturin_python.yml
@@ -56,6 +56,7 @@ jobs:
       matrix:
         ##target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
         target: [x86_64, aarch64]
+        manylinux: [auto, musllinux_1_1] ##
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -65,9 +66,10 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
+          manylinux: ${{ matrix.manylinux }} ##
           args: --release --out dist --manifest-path gadjid_python/Cargo.toml
           sccache: 'true'
-          manylinux: auto
+          ##manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v3
         with:
