--- a/.github/workflows/CI_maturin_python.yml
+++ b/.github/workflows/CI_maturin_python.yml
@@ -58,8 +58,8 @@ jobs:
         target: [x86_64, aarch64]
         manylinux: [auto, musllinux_1_1] ##
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
       - name: Build wheels
@@ -71,9 +71,9 @@ jobs:
           sccache: 'true'
           ##manylinux: auto
       - name: Upload wheels
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheel-linux-${{ matrix.target }}-${{ matrix.manylinux }}
           path: dist
 
   windows:
@@ -84,8 +84,8 @@ jobs:
         ##target: [x64, x86]
         target: [x64]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
           architecture: ${{ matrix.target }}
@@ -96,9 +96,9 @@ jobs:
           args: --release --out dist --manifest-path gadjid_python/Cargo.toml
           sccache: 'true'
       - name: Upload wheels
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheel-windows-${{ matrix.target }}
           path: dist
 
   macos:
@@ -108,8 +108,8 @@ jobs:
       matrix:
         target: [x86_64, aarch64]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
       - name: Build wheels
@@ -119,25 +119,25 @@ jobs:
           args: --release --out dist --manifest-path gadjid_python/Cargo.toml
           sccache: 'true'
       - name: Upload wheels
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheel-macos-${{ matrix.target }}
           path: dist
 
   sdist:
     runs-on: ubuntu-latest
     needs: test-lint ##
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Build sdist
         uses: PyO3/maturin-action@v1
         with:
           command: sdist
           args: --out dist --manifest-path gadjid_python/Cargo.toml
       - name: Upload sdist
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: wheel-sdist
           path: dist
 
   release:
@@ -155,9 +155,7 @@ jobs:
         run: |
             echo "MATURIN_REPOSITORY=pypi" > $GITHUB_OUTPUT
             [[ "$GITHUB_REF_NAME" == *"+test" ]] && echo "MATURIN_REPOSITORY=testpypi" > $GITHUB_OUTPUT || true
-      - uses: actions/download-artifact@v3
-        with:
-          name: wheels
+      - uses: actions/download-artifact@v4
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
         env:
@@ -165,4 +163,4 @@ jobs:
           MATURIN_REPOSITORY: ${{ steps.repository.outputs.MATURIN_REPOSITORY }} ##
         with:
           command: upload
-          args: --non-interactive --skip-existing *
+          args: --non-interactive --skip-existing wheel-*/*
