Rearrange pyproject.toml and directory structure.
Signed-off-by: Sebastian Weichwald <sweichwald@users.noreply.github.com>

--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           pip install ruff
           ruff --version
-          ruff gadjid_python
+          ruff check
 
       - name: Run rust tests
         run: |
