--- a/gadjid/Cargo.toml
+++ b/gadjid/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "gadjid"
-authors = ["Theo Würtzen", "Sebastian Weichwald", "Leonard Henckel"]
 version = "0.0.1-rc.0"
-description = "Adjustment Identification Distance: A gadjid for Causal Structure Learning"
-repository = "https://github.com/CausalDisco/gadjid"
-license = "MPL-2.0"
 edition = "2021"
+license = "MPL-2.0"
+authors = ["Theo Würtzen", "Sebastian Weichwald", "Leonard Henckel"]
+description = "Adjustment Identification Distance: A 𝚐𝚊𝚍𝚓𝚒𝚍 for Causal Structure Learning"
+repository = "https://github.com/CausalDisco/gadjid"
 
 [dependencies]
 rand = "0.8"
