Locate testgraphs relative to test script (i/o caller dir).
Signed-off-by: Sebastian Weichwald <sweichwald@users.noreply.github.com>

--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -58,4 +58,4 @@ jobs:
           source .venv/bin/activate
           pip install maturin
           maturin develop --manifest-path ./gadjid_python/Cargo.toml --extras=test
-          (cd gadjid_python && pytest)
+          pytest
