--- a/gadjid/Cargo.toml
+++ b/gadjid/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gadjid"
-version = "0.0.1-rc.2"
+version = "0.0.1"
 edition = "2021"
 license = "MPL-2.0"
 authors = ["Theo Würtzen", "Sebastian Weichwald", "Leonard Henckel"]
