--- a/gadjid_python/Cargo.toml
+++ b/gadjid_python/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gadjid_python"
-version = "0.0.1-rc.2"
+version = "0.0.1"
 edition = "2021"
 license = "MPL-2.0"
 publish = false
