--- a/gadjid/Cargo.toml
+++ b/gadjid/Cargo.toml
@@ -19,9 +19,9 @@ codegen-units = 1
 lto = "fat"
 opt-level = 3
 
-[profile.dev.package]
-insta.opt-level = 3
-similar.opt-level = 3
+[profile.test-opt]
+inherits = "test"
+opt-level = 3
 
 [dev-dependencies]
 insta = { version = "1.35", features = ["yaml"] }
