--- a/.github/workflows/test-lint.yml
+++ b/.github/workflows/test-lint.yml
@@ -49,6 +49,7 @@ jobs:
 
       - name: Run rust tests
         run: |
+          sha256sum --check testgraphs/checksums.sha256
           cargo test --manifest-path gadjid/Cargo.toml
           cargo test --manifest-path gadjid/Cargo.toml --profile test-opt -- --ignored
 
