--- a/gadjidR/src/rust/Cargo.toml
+++ b/gadjidR/src/rust/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = 'rgadjid'
+name = 'gadjidR'
 version = '0.1.0'
 edition = '2021'
 
 [lib]
 crate-type = [ 'staticlib' ]
-name = 'rgadjid'
+name = 'gadjidR'
 
 [dependencies]
 anyhow = "1.0.79"
